<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bearded Theory</string>

    <!-- Main Navigation Menu Toggle -->
    <string name="nav_open">Main Menu</string>
    <string name="nav_close">Close Menu</string>

    <!-- Main Navigation Menu Items -->
    <string name="nav_schedule">Schedule</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_now_next">Now &amp; Next</string>
    <string name="nav_performers">Performers</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Fragment Option Menu Items -->
    <string name="option_refresh">Refresh</string>

    <!-- Now & Next Tabs -->
    <string name="now_tab">On Now</string>
    <string name="next_tab">On Next</string>

    <!-- Toast Notifications -->
    <string name="schedule_download_error">Error downloading schedule</string>
    <string name="schedule_download_uptodate">Schedule is already up to date</string>
    <plurals name="schedule_download_complete">
        <item quantity="one">Downloaded %1$d event</item>
        <item quantity="other">Downloaded %1$d events</item>
    </plurals>

    <!-- Settings -->
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_summary">If checked, you will be notified of upcoming bookmarked events</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_summary">Vibrate on notification</string>
    <string name="settings_notifications_led">Flash LED</string>
    <string name="settings_notifications_led_summary">Blink the LED on notification</string>
    <string name="settings_notifications_delay">Notification time</string>
    <string-array name="settings_notifications_delay_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="settings_notifications_delay_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!-- Dialog Text -->
    <string name="about_text">Copyright 2016 Mat Booth\n\nLicensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>. Source code for this application is available on <a href="https://github.com/mbooth101/bearded-theory-companion">GitHub</a>.\n\nInspired by Christophe Beyls\' excellent FOSDEM Companion.</string>
</resources>
